--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-label": "^2.1.2",
+    "@types/isomorphic-fetch": "^0.0.39",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.4.10",
+    "isomorphic-fetch": "^3.0.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
