--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jszip": "^3.10.1",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
+    "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.1",
